--- a/index.css
+++ b/index.css
@@ -26,6 +26,12 @@ body {
     margin-bottom: 1rem;
 }
 
+.right-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .container {
     text-align: center;
     background: rgb(255, 255, 255);
