--- a/index.css
+++ b/index.css
@@ -8,7 +8,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     background-color: #ffffff;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .showcase {
@@ -36,6 +37,8 @@ body {
     text-align: center;
     background: rgb(255, 255, 255);
     background-color: #ffffff !important;
+    padding: 2rem;
+    margin: 1rem;
 }
 
 .container h4 {
@@ -45,7 +48,7 @@ body {
 .app-features {
     display: flex;
     margin: 0 0 2rem 0;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
  
 }
@@ -109,6 +112,15 @@ form {
 }
 
 
-
+@media screen and (max-width:675px) {
+    .app-features {
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+        justify-content: space-evenly;
+        align-items: center;
+     
+    }
+}
 
 
