--- a/style.css
+++ b/style.css
@@ -328,6 +328,8 @@ form {
     display: -ms-flexbox; /* IE10 */
     display: flex;
     width: 70%;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 15px;
 }
 .icon {
